@@ -17,7 +17,7 @@ import javaforce.webui.*;
 import javaforce.webui.event.*;
 
 public class ConfigService implements WebUIHandler {
-  public static String version = "0.5";
+  public static String version = "0.6";
   public static boolean debug = false;
   public WebUIServer server;
   private KeyMgmt keys;
